--- a/base.css
+++ b/base.css
@@ -1,3 +1,14 @@
 body {
     margin: 30px 25px 40px 25px;
 }
+
+.mat {
+    margin: 20px;
+}
+
+.cell {
+    width: 15px;
+    height: 15px;
+    display: inline-block;
+    background-color: #000;
+}
